--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
         <section class="converter-form">
             <form action="/convert-mp3" method="POST" id="form">
                 <div class="input-group">
-                    <input type="text" name="VedioID" placeholder="Paste YouTube link here..." required>
+                    <input type="text" name="VedioID" placeholder="Enter the Vedio ID..." required>
                     <button id="convert-btn" type="submit">Start <i class="fa fa-arrow-right"></i></button>
                 </div>
             </form>
